---------------------------------------------------------------------------------------------------
Version: 0.4.0
Date: 16.04.2023
  Features:
    - added more descriptions
    - added new recipe to purifier to vent normal water
    - added new recipe to extract water for the air filter and one to vent steam
    - added a setting to turn of beacon overload
    - added advanced centrifuge
  Changes:
    - added 2 more module slots to purifier
    - added 3 module slots to hyper cooler, added 2 more to air filters
    - locomotive now named diesel locomotive
    - buffed personal nuclear reactor to 1MW
    - each armor tier now only uses 1 of the previous
    - advanced motors require less steel mechanical parts and electronical parts
    - increased speed of advanced chemical plant from 2 to 3, to be in line with advanced centrifuge
    - reduced liquid nitrogen coolant usage of beacons to 1 and 2 /s respectively
    - decreased cost of induction matrix coils, basic coil now provides 25 instead of only 10 MJ
    - increased range of beacon and compact beacon by 2 tiles
  Bugfixes:
    - fixed more typos in lang (PR #15)
    - fixed that in Informatron the blakc hole requires an initial mass of 10 instead of 1000x10^3
    - set next upgrade of express belts to neo belts
---------------------------------------------------------------------------------------------------
Version: 0.3.1
Date: 12.04.2023
  Features:
    - added some more descriptions
    - added ru locale (PR #12)
  Changes:
    - buffed all fusion fuels
    - neutron collector now gets progressiv faster on higher efficiencies, 100% eff now has double speed
    - reduced neutron output of nuclear reactors and buffed fusion breeder reactors
    - added 2 more module slots to big lab
    - added some GUI tweaks (PR #10)
    - made neutron containers output multiple container per craft and removed need of magnets