@@ -600,6 +600,9 @@ ei_thorium-232-fuel=Thorium-232 based nuclear fuel, only works in the [color=gre
 ei_plutonium-239-fuel=Plutonium-239 based nuclear fuel. One fuel rod generates [color=orange]700k steam[/color] [fluid=steam] in 120 seconds, when used in the [color=green]nuclear reactor[/color] [item=ei_nuclear-reactor].
 ei_uranium-235-fuel=Uranium-235 based nuclear fuel. One fuel rod generates [color=orange]600k steam[/color] [fluid=steam] in 120 seconds, when used in the [color=green]nuclear reactor[/color] [item=ei_nuclear-reactor].
 ei_uranium-233-fuel=Uranium-233 based nuclear fuel. One fuel rod generates [color=orange]400k steam[/color] [fluid=steam] in 120 seconds, when used in the [color=green]nuclear reactor[/color] [item=ei_nuclear-reactor].
+ei_burner-inserter=This inserter burns fuel to move items. Can pull [color=orange]burnable fuel[/color] from machines it extracts from.
+ei_oil-refinery=A oil refinery powered using [color=red]heat[/color].
+ei_heat-chemical-plant=A chemical plant powered using [color=red]heat[/color].
 
 ei_space-data=Obtained by launching a [color=blue]satellite[/color] [item=satellite] into [color=green]nauvis orbit[/color].
 ei_moon-fish=Obtained by launching a [color=blue]raw fish[/color] [item=raw-fish] to the [color=green]moon[/color].
